tests/fixtures/errors/compilation-errors/src/Tabs.elm
module Tabs exposing (main)

import Html

main =
	Html.text "Hello"
